# ComfyUI-SaveAsScript

./: README.md  comfyui_to_python.py  comfyui_to_python_utils.py  pyproject.toml
.github/workflows/: daily-e2e.yml
js/: save-as-script.js
test/: e2e_save_as_script.py  test_workflow.json  verify_generated_script.py
