[project]
name = "comfyui-saveasscript"
description = "A version of ComfyUI-to-Python-Extension that works as a custom node. Adds a button in the UI that saves the current workflow as a Python file, a CLI for converting workflows, and slightly better custom node support."
version = "1.0.0"
license = "LICENSE"
dependencies = ["black"]

[project.urls]
Repository = "https://github.com/atmaranto/ComfyUI-SaveAsScript"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SaveAsScript"
Icon = ""
